--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 certifi==2019.9.11
 chardet==3.0.4
+Click==7.0
+elasticsearch==7.0.4
+elasticsearch-dsl==7.0.0
+Flask==1.1.1
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
 loguru==0.3.2
+MarkupSafe==1.1.1
 pkg-resources==0.0.0
+python-dateutil==2.8.0
 PyYAML==5.1.2
 requests==2.22.0
+six==1.12.0
 urllib3==1.25.3
+Werkzeug==0.15.6
